# msp-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/headers/: BoostNamespaces.hpp  Types.hpp
src/modules/: Logger.cpp  MinecraftProtocol.cpp  MinecraftProtocol.ixx  MinecraftServer.cpp  MinecraftServer.ixx
src/modules/exceptions/: CodecParsingException.cpp  CodecParsingException.ixx  IOException.cpp  IOException.ixx  IOStreamException.cpp  IOStreamException.ixx  PacketParsingException.cpp  PacketParsingException.ixx
src/modules/io/codecs/:  VarIntCodec.cpp  ArrayCodec.cpp  ArrayCodec.ixx  GameProfileCodec.cpp  GameProfileCodec.ixx  PrefixedOptionalCodec.cpp  PrefixedOptionalCodec.ixx  StringCodec.cpp  StringCodec.ixx  UUIDCodec.cpp  UUIDCodec.ixx  VarIntCodec.cpp  VarIntCodec.ixx
src/modules/io/codecs/base/: BasicCodec.ixx  Codec.cpp  Codec.ixx  CodecRequiringCodec.ixx  CodecRequiringCodecd.cpp
src/modules/io/codecs/packetcodecs/: ArrayPacketCodec.cpp  ArrayPacketCodec.ixx  Codecs.cpp  Codecs.ixx  GameProfileCodec.cpp  GameProfileCodec.ixx  GameProfilePacketCodec.cpp  GameProfilePacketCodec.ixx  IdentifierPacketCodec.cpp  IdentifierPacketCodec.ixx  PacketCodecs.cpp  PacketCodecs.ixx  PrefixedArrayPacketCodec.cpp  PrefixedArrayPacketCodec.ixx  PrefixedOptionalCodec.cpp  PrefixedOptionalPacketCodec.cpp  PrefixedOptionalPacketCodec.ixx  PropertyPacketCodec.cpp  PropertyPacketCodec.ixx  StringPacketCodec.cpp  StringPacketCodec.ixx  UUIDCodec.cpp  UUIDPacketCodec.cpp  UUIDPacketCodec.ixx  VarIntCodec.cpp  VarIntPacketCodec.cpp  VarIntPacketCodec.ixx
src/modules/io/codecs/packetcodecs/base/: PacketCodec.cpp  PacketCodec.ixx
src/modules/io/memory/: CustomMemoryArena.cpp  CustomMemoryArena.ixx
src/modules/io/streams/inputstream/: FlexibleStreamBuf.cpp  FlexibleStreamBuf.ixx  TypedInputStream.cpp  TypedInputStream.ixx  VectorStreamBuf.cpp  VectorStreamBuf.ixx
src/modules/io/streams/outputstream/: TypedOutputStream.cpp  TypedOutputStream.ixx
src/modules/networking/: MinecraftClient.cpp  MinecraftClient.ixx  MinecraftProtocol.cpp  MinecraftProtocol.ixx  MinecraftServer.cpp  MinecraftServer.ixx
src/modules/networking/packet/: Packets.cpp  Packets.ixx
src/modules/networking/packet/packets/: Packet.cpp  Packet.ixx
src/modules/networking/packet/packets/base/: Packet.cpp  Packet.ixx
src/modules/networking/packet/packets/c2s/base/: PacketC2S.cpp  PacketC2S.ixx
src/modules/networking/packet/packets/c2s/configuration/: C2SClientInformationPacket.cpp  C2SClientInformationPacket.ixx  C2SCustomPayloadPacket.cpp  C2SCustomPayloadPacket.ixx  C2SFinishConfigurationPacket.cpp  C2SFinishConfigurationPacket.ixx
src/modules/networking/packet/packets/c2s/handshake/: C2SIntentionPacket.cpp  C2SIntentionPacket.ixx
src/modules/networking/packet/packets/c2s/login/: C2SLoginAcknowledgedPacket.cpp  C2SLoginAcknowledgedPacket.ixx  C2SLoginStartPacket.cpp  C2SLoginStartPacket.ixx
src/modules/networking/packet/packets/s2c/: PacketS2C.ixx
src/modules/networking/packet/packets/s2c/base/: PacketS2C.ixx
src/modules/networking/packet/packets/s2c/configuration/: S2CFinishConfigurationPacket.cpp  S2CFinishConfigurationPacket.ixx
src/modules/networking/packet/packets/s2c/login/: S2CLoginFinishedPacket.cpp  S2CLoginFinishedPacket.ixx
src/modules/networking/packet/packets/s2c/play/: S2CPlayerPositionPacket.cpp  S2CPlayerPositionPacket.ixx
src/modules/networking/packet/packettypes/: PacketType.cpp  PacketType.ixx  PacketTypeDef.ixx
src/modules/networking/packet/packettypes/base/: PacketType.ixx
src/modules/networking/packet/packettypes/c2s/: PacketTypeC2S.cpp  PacketTypeC2S.ixx
src/modules/networking/packet/packettypes/c2s/base/: PacketTypeC2S.cpp  PacketTypeC2S.ixx
src/modules/networking/packet/packettypes/c2s/configuration/: C2SClientInformationPacketType.cpp  C2SClientInformationPacketType.ixx  C2SCustomPayloadPacketType.cpp  C2SCustomPayloadPacketType.ixx  C2SFinishConfigurationPacketType.cpp  C2SFinishConfigurationPacketType.ixx
src/modules/networking/packet/packettypes/c2s/handshake/: C2SIntentionPacketType.cpp  C2SIntentionPacketType.ixx
src/modules/networking/packet/packettypes/c2s/login/: C2SLoginAcknowledgedPacketType.cpp  C2SLoginAcknowledgedPacketType.ixx  C2SLoginStartPacketType.cpp  C2SLoginStartPacketType.ixx
src/modules/networking/packet/packettypes/s2c/: PacketTypeS2C.cpp
src/modules/networking/packet/packettypes/s2c/base/: PacketTypeS2C.cpp  PacketTypeS2C.ixx
src/modules/networking/packet/packettypes/s2c/configuration/: S2CFinishConfigurationPacketType.cpp  S2CFinishConfigurationPacketType.ixx
src/modules/networking/packet/packettypes/s2c/login/: S2CLoginFinishedPacketType.cpp  S2CLoginFinishedPacketType.ixx
src/modules/networking/packet/packettypes/s2c/play/: S2CPlayerPositionPacketType.cpp  S2CPlayerPositionPacketType.ixx
src/modules/types/: GameProfile.ixx  Identifier.cpp  Identifier.ixx  Property.ixx  UUID.cpp  UUID.ixx
src/modules/utils/: Base64Utils.cpp  Base64Utils.ixx  Concepts.ixx  EndiannessUtils.cpp  EndiannessUtils.ixx  Logger.cpp  Logger.ixx  RandUtils.cpp  RandUtils.ixx
src/modules/utils/enums/: ChatMode.ixx  DisplayedSkinParts.ixx  MainHand.ixx  ParticleStatus.ixx  Phase.ixx  TeleportFlags.ixx
test/sources/: main.cpp
